more slides and samples

--- a/demo/app/app.html
+++ b/demo/app/app.html
@@ -3,9 +3,11 @@
 <head>
     <title>{{title}}</title>
 </head>
-    <body>
-        <h1>{{title}}</h1>
-        <script src="../Scripts/angular.js"></script>
-        <script src="app.js"></script>
-    </body>
+<body>
+    <h1>{{title}}</h1>
+    <span>{{mainContent}}</span>
+    <script src="../Scripts/angular.js"></script>
+    <script src="services.js"></script>
+    <script src="app.js"></script>
+</body>
 </html>
