added decorator demo

--- a/demo/app/app.html
+++ b/demo/app/app.html
@@ -6,6 +6,7 @@
 <body>
     <h1>{{title}}</h1>
     <span>{{mainContent}}</span>
+    <script src="../Scripts/stacktrace.js"></script>
     <script src="../Scripts/angular.js"></script>
     <script src="services.js"></script>
     <script src="app.js"></script>
