--- a/demo/app/appFinal.html
+++ b/demo/app/appFinal.html
@@ -22,9 +22,12 @@
                 </tr>
             </tbody>
         </table>
+        <button data-ng-click="failTheHardWay()">Fail Hard!</button>
     </div>
+    <script src="../Scripts/stacktrace.js"></script>
     <script src="../Scripts/angular.js"></script>
     <script src="services.js"></script>
     <script src="appFinal.js"></script>
+    <script src="exceptionHandler.js"></script>
 </body>
 </html>
