--- a/demo/app/appFinal.html
+++ b/demo/app/appFinal.html
@@ -17,6 +17,6 @@
     <script src="appFinal.js"></script>
     <script src="exceptionHandler.js"></script>
     <script src="todoListCtrl.js"></script>
-    <!--<script src="browserCacheInterceptor.js"></script>-->
+    <script src="browserCacheInterceptor.js"></script>
 </body>
 </html>
