Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
 <h2>
 <a name="dependency-injection--in-javascript--magari-" class="anchor" href="#dependency-injection--in-javascript--magari-"><span class="octicon octicon-link"></span></a>Dependency Injection ?!? In Javascript ?!? Magari !</h2>
+
+<p>Here are your <a href="http://agiorgetti.github.io/AngularjsDay1/presentation/index.html">SLIDES</a></p>
+
+<p>And your <a href="http://agiorgetti.github.io/AngularjsDay1/demo/app/appFinal.html">RUNNING DEMO</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/AGiorgetti">AGiorgetti</a></p>
